<resources>
    <string name="app_name">MyApp02</string>
    <string name="colorsoftherainbow">Click to change color</string>
    <string name="submitname">Click to submit.</string>
    <string name="first_name">First Name</string>
    <string name="what_color">What color?</string>
    <string name="what_is_your_name">What is your name?</string>
    <string-array name = "colors_Array">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>

    </string-array>
</resources>